--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
             <div class="col-4">
               <h1>
                 <span id="today-temperature"> </span>
-                <span class="temp-scale">
-                  <a href="#" id="celcius">°C</a>
-                </span>
+                <span class="temp-scale"> °C </span>
               </h1>
 
               <h2>
@@ -172,6 +170,14 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="footer">
+          This page was coded by Jonna Laine and is
+          <a href="https://github.com/jonnlai/my-weather-app"
+            >open-sourced on GitHub</a
+          >
+          and hosted on
+          <a href="https://www.netlify.com/">Netlify</a>.
         </div>
       </div>
     </div>
