--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <div class="col-4">
               <h1 id="city-name"></h1>
               <h2>
-                <div class="today-date" id="current-date"></div>
-                <div id="current-time"></div>
+                Last updated:
+                <div id="current-date"></div>
               </h2>
             </div>
             <div class="col-4">
@@ -72,7 +72,7 @@
 
               <h2>
                 Humidity: <span id="humidity"></span>% <br />
-                Wind: <span id="wind-speed"></span> m/s
+                Wind: <span id="wind-speed"></span> km/h
               </h2>
             </div>
           </div>
