Added today's weather icon from API

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               </h2>
             </div>
             <div class="col-4">
-              <img src="images/cloud.png" alt="" class="today-symbol" />
+              <img src="" alt="" class="today-symbol" id="today-icon" />
               <div class="description" id="description"></div>
             </div>
             <div class="col-4">
