--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
             </div>
           </div>
         </div>
-        <div class="footer">
-          This page was coded by Jonna Laine and is
-          <a href="https://github.com/jonnlai/my-weather-app"
-            >open-sourced on GitHub</a
-          >
-          and hosted on
-          <a href="https://www.netlify.com/">Netlify</a>.
-        </div>
+      </div>
+      <div class="footer">
+        This page was coded by Jonna Laine and is
+        <a href="https://github.com/jonnlai/my-weather-app" target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and hosted on
+        <a href="https://www.netlify.com/" target="_blank">Netlify</a>.
       </div>
     </div>
     <script src="src/index.js"></script>
