Aligned weather data and weather icon

--- a/index.html
+++ b/index.html
@@ -54,26 +54,30 @@
         <div class="forecast">
           <div class="row">
             <div class="col-4">
-              <h1 id="city-name"></h1>
-              <h2>
-                Last updated:
-                <div id="current-date"></div>
-              </h2>
+              <div class="weather-data">
+                <h1 id="city-name"></h1>
+                <h2>
+                  Last updated:
+                  <div id="current-date"></div>
+                </h2>
+              </div>
             </div>
             <div class="col-4">
               <img src="" alt="" class="today-symbol" id="today-icon" />
               <div class="description" id="description"></div>
             </div>
             <div class="col-4">
-              <h1>
-                <span id="today-temperature"> </span>
-                <span class="temp-scale"> °C </span>
-              </h1>
+              <div class="weather-data">
+                <h1>
+                  <span id="today-temperature"> </span>
+                  <span class="temp-scale"> °C </span>
+                </h1>
 
-              <h2>
-                Humidity: <span id="humidity"></span>% <br />
-                Wind: <span id="wind-speed"></span> km/h
-              </h2>
+                <h2>
+                  Humidity: <span id="humidity"></span>% <br />
+                  Wind: <span id="wind-speed"></span> km/h
+                </h2>
+              </div>
             </div>
           </div>
           <div class="future-weather">
