Edit the button size and weather data row width

--- a/index.html
+++ b/index.html
@@ -37,14 +37,18 @@
             />
           </div>
           <div class="col-2">
-            <button type="submit" class="btn btn-dark mb-3" id="search-button">
+            <button
+              type="submit"
+              class="btn btn-dark mb-2 mx-3 py-2 px-3"
+              id="search-button"
+            >
               Search
             </button>
           </div>
           <div class="col-2">
             <button
               type="submit"
-              class="btn btn-dark mb-3 current-city"
+              class="btn btn-dark mb-2 mx-3 py-1 px-3 current-city"
               id="current-city-button"
             >
               Current City
@@ -53,7 +57,7 @@
         </form>
         <div class="forecast">
           <div class="row">
-            <div class="col-4">
+            <div class="col-6">
               <div class="weather-data">
                 <h1 id="city-name"></h1>
                 <h2>
@@ -62,11 +66,11 @@
                 </h2>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-3">
               <img src="" alt="" class="today-symbol" id="today-icon" />
               <div class="description" id="description"></div>
             </div>
-            <div class="col-4">
+            <div class="col-3">
               <div class="weather-data">
                 <h1>
                   <span id="today-temperature"> </span>
