Added Celsius/Fahrenheit conversion

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
               <div class="weather-data">
                 <h1>
                   <span id="today-temperature"> </span>
-                  <span class="temp-scale"> °C </span>
+                  <span class="temp-scale">
+                    <a href="#" class="active" id="celsius">°C</a> |
+                    <a href="#" id="fahrenheit"> °F </a></span
+                  >
                 </h1>
 
                 <h2>
