--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <div class="container">
       <div class="weather-app">
-        <form class="row g-3" id="city-search-form">
+        <form class="row search-engine" id="city-search-form">
           <div class="col-3"></div>
           <div class="col-5">
             <input
@@ -48,7 +48,7 @@
           <div class="col-2">
             <button
               type="submit"
-              class="btn btn-dark mb-2 mx-3 py-1 px-3 current-city"
+              class="btn btn-dark btn-lg mb-2 mx-3 py-1 px-4 current-city-button"
               id="current-city-button"
             >
               Current City
@@ -60,10 +60,6 @@
             <div class="col-6">
               <div class="weather-data">
                 <h1 id="city-name"></h1>
-                <h2>
-                  Last updated:
-                  <div id="current-date"></div>
-                </h2>
               </div>
             </div>
             <div class="col-3">
@@ -87,6 +83,7 @@
               </div>
             </div>
           </div>
+
           <div class="future-weather">
             <div class="row text-center">
               <div class="col-2">
@@ -181,6 +178,9 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="current-date">
+          Last updated: <span id="current-date"></span>
         </div>
       </div>
       <div class="footer">
