--- a/index.html
+++ b/index.html
@@ -84,100 +84,7 @@
             </div>
           </div>
 
-          <div class="future-weather">
-            <div class="row text-center">
-              <div class="col-2">
-                <div class="card">
-                  <h5 class="card-header">Sun</h5>
-                  <div class="card-body">
-                    <h5 class="card-title">
-                      <img
-                        src="images/cloud.png"
-                        alt="cloud"
-                        class="weather-symbol"
-                      />
-                    </h5>
-                    <p class="card-text">7°C</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-2">
-                <div class="card">
-                  <h5 class="card-header">Mon</h5>
-                  <div class="card-body">
-                    <h5 class="card-title">
-                      <img
-                        src="images/cloud.png"
-                        alt="cloud"
-                        class="weather-symbol"
-                      />
-                    </h5>
-                    <p class="card-text">6°C</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-2">
-                <div class="card">
-                  <h5 class="card-header">Tue</h5>
-                  <div class="card-body">
-                    <h5 class="card-title">
-                      <img
-                        src="images/cloud.png"
-                        alt="cloud"
-                        class="weather-symbol"
-                      />
-                    </h5>
-                    <p class="card-text">8°C</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-2">
-                <div class="card">
-                  <h5 class="card-header">Wed</h5>
-                  <div class="card-body">
-                    <h5 class="card-title">
-                      <img
-                        src="images/sun-cloud.png"
-                        alt="sun and cloud"
-                        class="weather-symbol"
-                      />
-                    </h5>
-                    <p class="card-text">6°C</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-2">
-                <div class="card">
-                  <h5 class="card-header">Thu</h5>
-                  <div class="card-body">
-                    <h5 class="card-title">
-                      <img
-                        src="images/sun-cloud.png"
-                        alt="sun and cloud"
-                        class="weather-symbol"
-                      />
-                    </h5>
-                    <p class="card-text">4°C</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-2">
-                <div class="card">
-                  <h5 class="card-header">Fri</h5>
-                  <div class="card-body">
-                    <h5 class="card-title">
-                      <img
-                        src="images/cloud.png"
-                        alt="cloud"
-                        class="weather-symbol"
-                      />
-                    </h5>
-                    <p class="card-text">3°C</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="future-weather" id="forecast"></div>
         </div>
         <div class="current-date">
           Last updated: <span id="current-date"></span>
