Removed Fahrenheit conversion

--- a/index.html
+++ b/index.html
@@ -70,10 +70,7 @@
               <div class="weather-data">
                 <h1>
                   <span id="today-temperature"> </span>
-                  <span class="temp-scale">
-                    <a href="#" class="active" id="celsius">°C</a> |
-                    <a href="#" id="fahrenheit"> °F </a></span
-                  >
+                  <span class="temp-scale"> °C </span>
                 </h1>
 
                 <h2>
