--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               </div>
             </div>
             <div class="col-3">
-              <img src="" alt="" class="today-symbol" id="today-icon" />
+              <img src="" alt="" class="today-icon" id="today-icon" />
               <div class="description" id="description"></div>
             </div>
             <div class="col-3">
@@ -87,12 +87,10 @@
           Last updated: <span id="current-date"></span>
         </div>
         <div class="footer">
-          This page was coded by Jonna Laine and is
           <a href="https://github.com/jonnlai/my-weather-app" target="_blank"
-            >open-sourced on GitHub</a
+            >Open-source code</a
           >
-          and hosted on
-          <a href="https://www.netlify.com/" target="_blank">Netlify</a>.
+          by Jonna Laine.
         </div>
       </div>
     </div>
